apps/base/media/zilean/zilean-pgadmin.yaml
apiVersion: v1
kind: Service
metadata:
  name: zilean-pgadmin
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: zilean-pgadmin
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zilean-pgadmin
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: zilean-pgadmin
  template:
    metadata:
      labels:
        app: zilean-pgadmin
    spec:
      securityContext:
        fsGroup: 5050
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 5050
            runAsGroup: 5050
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: pgadmin-data
              mountPath: /var/lib/pgadmin
            - name: pgadmin-config
              mountPath: /pgadmin4/servers.json
              subPath: servers.json
            - name: pgadmin-config
              mountPath: /pgpass
              subPath: pgpass
      volumes:
        - name: pgadmin-data
          persistentVolumeClaim:
            claimName: zilean-pgadmin-data
        - name: pgadmin-config
          secret:
            secretName: zilean-pgadmin-config
---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: zilean-pgadmin-data
#   namespace: media
# spec:
#   accessModes:
#     - ReadWriteOnce
#   storageClassName: ceph-rbd
#   resources:
#     requests:
#       storage: 5Gi
