apps/base/media/zilean/zilean-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: zilean-ingress
  namespace: media
  annotations:
    gethomepage.dev/href: "https://zilean.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Zilean"
    gethomepage.dev/description: "Zurg/Torrent scraper backend feeding Riven"
    gethomepage.dev/app: zilean
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons/svg/jackett.svg"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`zilean.lab.mainertoo.com`)
      kind: Rule
      services:
        - name: zilean          # ⬅ was media-zilean
          port: 8282
      # middlewares:
      #   - name: authentik
      #     namespace: authentik
  tls: {}
